# schedulite

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  log4rs.yaml  schedulite.json
data/: tasks1.json
src/: cli.rs  filecopy.rs  lib.rs  main.rs  ops.rs  tests.rs
