[package]
name = "schedulite"
version = "0.2.0"
edition = "2021"
authors = ["Augustin Preda"]
description = "A simple scheduler for light tasks"
repository = "https://github.com/dezGusty/schedulite"
license = "MIT"
readme = "README.md"
keywords = ["scheduler", "cron", "job", "task"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron = "*"
chrono = { version = "0.4", features = ["serde"] }
hotwatch = "0.4.6"
job_scheduler_ng = "*"
log = "0.4.17"
log4rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.0", features = ["full"] }
